80% of the work done on 20012021

--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Marcus Dashe">
+    <meta name="keywords" content="C-STEMP, CSTEMP, Innovation, ICT, Jos, Web Design, Web Development, Digital Skills" >
+    <meta name="descriptions" content="C-STEMP Innovation Hub Jos" >
+    <link rel="shortcut icon" type="image/png" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSTEMP Innovation Hub Jos</title>
+    <!--Custom CSS-->
     <link rel="stylesheet" href="./public/index.css">
     <link rel="stylesheet" href="./public/about.css">
     <link rel="stylesheet" href="./public/course.css">
+    <link rel="stylesheet" href="./public/gallery.css">
+    <link rel="stylesheet" href="./public/contact.css">
+    <link rel="stylesheet" href="./public/form.css">
 
-
+    <!--Animate CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    
 </head>
 <body>
     <div id="root"></div>
