--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Marcus Dashe">
-    <meta name="keywords" content="C-STEMP, CSTEMP, Innovation, ICT, Jos, Web Design, Web Development, Digital Skills" >
+    <meta name="keywords" content="C-STEMP, CSTEMP, Innovation, ICT, Jos, Web Design, Web Development, Digital Skills, Python programming, Graphic, UI/UX" >
     <meta name="descriptions" content="C-STEMP Innovation Hub Jos" >
     <link rel="shortcut icon" type="image/png" href="/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
